--- a/src/Services/CityCab.Rider.API/CityCab.Rider.API.csproj
+++ b/src/Services/CityCab.Rider.API/CityCab.Rider.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0" />
+    <PackageReference Include="Carter" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
       <PrivateAssets>all</PrivateAssets>
@@ -24,10 +25,6 @@
     <ProjectReference Include="..\..\BuildingBlocks\CityCab.Common\CityCab.Common.csproj" />
     <ProjectReference Include="..\..\BuildingBlocks\CityCab.Messaging\CityCab.Messaging.csproj" />
     <ProjectReference Include="..\..\CityCab.ServiceDefaults\CityCab.ServiceDefaults.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\" />
   </ItemGroup>
 
 </Project>
